hphp/hack/test/typecheck/reactive/parse_multiple2.php.exp
File "parse_multiple2.php", line 4, characters 3-20:
Multiple __Rx, __RxShallow, or __RxLocal annotations are not allowed. (Parsing[1002])
